# fi

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  fi.schema.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: fi.yaml.example
src/: config.rs  git.rs  jira.rs  main.rs  template.rs  verbose.rs
src/commands/: config.rs  cull.rs  init.rs  list.rs  mod.rs  new.rs  open.rs  pr.rs  sync.rs
